--- a/Ejobs/templates/change_password.html
+++ b/Ejobs/templates/change_password.html
@@ -15,7 +15,7 @@
         
           <div class="auth-form-wrapper">
           <h2 >Change password</h2><br><br><br>
-            <form action="" method="post">
+            <form action="{% url 'password_change' %}" method="post">
               {% csrf_token %}
 
               <div class="form-item">
@@ -31,7 +31,7 @@
                 <input
                   type="password"
                   class="form-input"
-                  name="username"
+                  name="password1"
                   required="true"
                   placeholder="New Password"
                 />
@@ -42,7 +42,7 @@
                   type="password"
                   required="true"
                   class="form-input"
-                  name="password1"
+                  name="password2"
                   placeholder="Confirm New Password"
                 />
               </div>
