--- a/Ejobs/templates/change_password.html
+++ b/Ejobs/templates/change_password.html
@@ -1,5 +1,6 @@
 {% load static %}
   {% include 'seeker/seekerHeader.html'%}
+  <title>Edit Profile</title>
     <main class="signup auth">
       <div class="container">
         <div class="auth-left">
