--- a/Ejobs/templates/jobs/addJob.html
+++ b/Ejobs/templates/jobs/addJob.html
@@ -1,5 +1,6 @@
 
 {% include 'header.html' %}
+<title>Add job</title>
 {% comment %} {% load static %} 
 <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}" /> {% endcomment %}
 {% block content %}
