--- a/Ejobs/templates/jobs/applicant.html
+++ b/Ejobs/templates/jobs/applicant.html
@@ -1,4 +1,4 @@
-{% include "header.html" %}
+<title>Applicant</title>{% include "header.html" %}
 {% if jobs %}
 <h2 class="job-item-title">Applicants For  : {{ job.job }}</h2>
 <section class="jobs-wrapper section-wrapper">
