--- a/Ejobs/templates/jobs/appliedjobs.html
+++ b/Ejobs/templates/jobs/appliedjobs.html
@@ -1,4 +1,5 @@
 {% include 'header.html' %}
+<title>Applied Jobs</title>
 <section class="jobs-wrapper section-wrapper">
   <ul class="jobs-cards">
   <h1> Your applied jobs</h1>
