--- a/Ejobs/templates/jobs/edit_job.html
+++ b/Ejobs/templates/jobs/edit_job.html
@@ -1,5 +1,6 @@
 
 {% include 'recruiter/recruiterHeader.html' %}
+<title>Edit job</title>
 {% load static %} 
 <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}" />
 {% block content %}
