--- a/Ejobs/templates/jobs/job_details_2.html
+++ b/Ejobs/templates/jobs/job_details_2.html
@@ -1,4 +1,5 @@
 {% include 'header.html'%}
+<title>Job Details</title>
 <section class="job-detail-wrapper section-wrapper">
         <div class="job-detail-top">
           <div class="job-detail-image">
