--- a/Ejobs/templates/jobs/savedjobs.html
+++ b/Ejobs/templates/jobs/savedjobs.html
@@ -1,5 +1,5 @@
 {% include 'header.html' %}
-
+<title>Saved Jobs</title>
 <section class="jobs-wrapper section-wrapper">
   <ul class="jobs-cards">
   <h1> Your saved jobs</h1>
