--- a/Ejobs/templates/jobs/search.html
+++ b/Ejobs/templates/jobs/search.html
@@ -1,4 +1,5 @@
 {% include 'seeker/seekerHeader.html'%}
+<title>Jobs</title>
     <div class="cta">
         <div class="search-bar">
              <form method="get" action="{% url 'search' %}" class="search-bar">            
