--- a/Ejobs/templates/seeker/edit_add_details.html
+++ b/Ejobs/templates/seeker/edit_add_details.html
@@ -1,4 +1,5 @@
 {% include 'seeker/seekerHeader.html' %}
+<title>Edit Profile</title>
   <main class="signup auth">
       <div class="container">
         <div class="auth-left">
