--- a/Ejobs/templates/seeker/seeker_register.html
+++ b/Ejobs/templates/seeker/seeker_register.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-
+<title>Register</title>
   {% include 'header.html'%}
     <main class="signup auth">
       <div class="container">
