--- a/Ejobs/templates/index.html
+++ b/Ejobs/templates/index.html
@@ -46,9 +46,7 @@
                     <h3 class="services-card-title">Job Search</h3>
                   </div>
                   <p class="services-card-bottom">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor,eirmod tempor eirmod tempor,eirmod
-                    tempo eirmod tempor,eirmod tempo
+                    At Ejobs, you get to explore a wide range of job vacancies in just a click. Ejobs has made job search way more easier than ever.
                   </p>
                 </div>
               </li>
@@ -56,8 +54,8 @@
                 <h1 class="services-card-number">2</h1>
                 <div class="services-card-content">
                   <div class="services-card-top">
-                    <i class="fas fa-search"></i>
-                    <h3 class="services-card-title">Job Search</h3>
+                    <i class="fas fa-users"></i>
+                    <h3 class="services-card-title">Recruitment</h3>
                   </div>
                   <p class="services-card-bottom">
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
@@ -70,8 +68,8 @@
                 <h1 class="services-card-number">3</h1>
                 <div class="services-card-content">
                   <div class="services-card-top">
-                    <i class="fas fa-search"></i>
-                    <h3 class="services-card-title">Job Search</h3>
+                    <i class="fas fa-laptop-house"></i>
+                    <h3 class="services-card-title">Placement</h3>
                   </div>
                   <p class="services-card-bottom">
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
