--- a/Ejobs/templates/jobs/applicants.html
+++ b/Ejobs/templates/jobs/applicants.html
@@ -1,5 +1,5 @@
 {% include "header.html" %}
-
+<title>Applicants</title>
 <section class="jobs-wrapper section-wrapper">
   <ul class="jobs-cards">
   {% for job in jobs %}
