--- a/Ejobs/templates/jobs/jobhome.html
+++ b/Ejobs/templates/jobs/jobhome.html
@@ -1,6 +1,6 @@
 
 {% include "recruiter/recruiterHeader.html" %}
-
+<title>Ejobs</title>
 {% block content %}
 <div class="container">
   <div class="row">
