--- a/Ejobs/templates/seeker/login.html
+++ b/Ejobs/templates/seeker/login.html
@@ -1,4 +1,5 @@
 {% load static %}
+<title>Login</title>
   {% include 'header.html'%}
     <main class="signup auth">
       <div class="container">
