--- a/Ejobs/templates/seeker/profile.html
+++ b/Ejobs/templates/seeker/profile.html
@@ -1,4 +1,5 @@
 {% include 'header.html' %}
+<title>Profile</title>
 <section class="profile-wrapper section-wrapper">
         <div class="profile-top-wrapper">
           <div class="profile-image-wrapper">
@@ -91,7 +92,7 @@
           <a href="{{socialdata.twitter}}" target="popup"  onclick="tab.open('{{socialdata.twitter}}','name')"><i class="fab fa-twitter-square"></i></a>
           <a href="{{socialdata.others}}" target="popup"  onclick="tab.open('{{socialdata.others}}','name')"><i class="fab fa-google-plus"></i></a>
           <a href="{% url 'password_change' %}">change password></a>
-          <a href=" ">edit details></a>
+          <a href=" {% url 'edit_social_data' %} ">edit details></a>
             </li>
 
     {% endfor %}
