--- a/Ejobs/templates/seeker/seekerDashboard.html
+++ b/Ejobs/templates/seeker/seekerDashboard.html
@@ -1,4 +1,5 @@
 {% load static %} {% include "header.html" %}
+<title>Dashboard</title>
 <main>
   <div class="container">
     <div class="show-avilable-wrapper">
@@ -24,7 +25,7 @@
 <section class="jobs-wrapper section-wrapper">
   <ul class="jobs-cards">
   {% for job in jobs %}
-  <h2>Jobs that you may be interested in.</h2>
+  <h2>Recommended jobs.</h2>
     <li class="jobs-card-wrapper">
       <a href="{% url 'job_details_2' id=job.job_id %}"> 
         <div class="jobs-top-category">
