--- a/Ejobs/templates/change_password.html
+++ b/Ejobs/templates/change_password.html
@@ -1,5 +1,5 @@
 {% load static %}
-  {% include 'seeker/seekerHeader.html'%}
+  {% include 'header.html'%}
   <title>Edit Profile</title>
     <main class="signup auth">
       <div class="container">
