--- a/Ejobs/templates/index.html
+++ b/Ejobs/templates/index.html
@@ -46,7 +46,9 @@
                     <h3 class="services-card-title">Job Search</h3>
                   </div>
                   <p class="services-card-bottom">
-                    At Ejobs, you get to explore a wide range of job vacancies in just a click. Ejobs has made job search way more easier than ever.
+                    At Ejobs, you get to explore a wide range of job vacancies in just a click. 
+                    Ejobs has made job search way more easier than ever. We filter thousands of available jobs to match with your search. 
+                    Your convinience is our priority and we guarantee a good service at Ejobs.
                   </p>
                 </div>
               </li>
@@ -58,9 +60,10 @@
                     <h3 class="services-card-title">Recruitment</h3>
                   </div>
                   <p class="services-card-bottom">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor,eirmod tempor eirmod tempor,eirmod
-                    tempo eirmod tempor,eirmod tempo
+                    At Ejobs, we help you to find ideal employees for your vacant jobs. 
+                    We value each vacancy and ensure that you get the best employees for your company. 
+                    Recruitment is easy and your jobs reach the seekers easily. 
+                    We guarantee a convinient connection between recruiters and the job seekers.
                   </p>
                 </div>
               </li>
@@ -69,12 +72,11 @@
                 <div class="services-card-content">
                   <div class="services-card-top">
                     <i class="fas fa-laptop-house"></i>
-                    <h3 class="services-card-title">Placement</h3>
+                    <h3 class="services-card-title">Recommendation</h3>
                   </div>
                   <p class="services-card-bottom">
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor,eirmod tempor eirmod tempor,eirmod
-                    tempo eirmod tempor,eirmod tempo
+                    Ejobs is a platform for seekers. At Ejobs you'll be recommended jobs automatically without you having to explore them. 
+                    We understand your preferences and use advanced algorithms to show you jobs that you're searching for without actually searching for them.
                   </p>
                 </div>
               </li>
