--- a/Ejobs/templates/jobs/jobs.html
+++ b/Ejobs/templates/jobs/jobs.html
@@ -102,8 +102,4 @@
       {% endfor %}
     </li>
  </section>
-<div class="popup-msg">
-  {% for message in messages %}
-    <p class="popup-msg-text">{{message}}</h1>
-  {% endfor %}
-</div>
+{% include 'footer.html' %}
