--- a/Ejobs/templates/recruiter/profile.html
+++ b/Ejobs/templates/recruiter/profile.html
@@ -1,51 +1,3 @@
-{% comment %}
-{% include 'recruiter/recruiterHeader.html' %}
-{% for userdata in userdata %}
-<div class="profile-wrapper">
-  <ul class="profile-items">
-    <li class="profile-item profile-first-name">
-      <small class="profile-item-title">First Name</small>
-      <p class="profile-item-text">{{request.user.first_name}}</p>
-    </li>
-    <li class="profile-item profile-last-name">
-      <small class="profile-item-title">Last Name</small>
-      <p class="profile-item-text">{{request.user.last_name}}</p>
-    </li>
-    <li class="profile-item ">
-      <small class="profile-item-title">Profile image</small>
-      <p ><img src="{{userdata.image.url}}" class="profile-image" alt="Avatar"></p>
-    </li> 
-    <li class="profile-item profile-email">
-      <small class="profile-item-title">Email</small>
-      <p class="profile-item-text">{{request.user.email}}</p>
-    </li>
-    
-    <li class="profile-item profile-contact">
-      <small class="profile-item-title">Contact</small>
-      <p class="profile-item-text">{{userdata.contact}}</p>
-    </li>
-    <li class="profile-item profile-gender">
-      <small class="profile-item-title">Company Address</small>
-      <p class="profile-item-text">{{userdata.address}}</p>
-    </li>
-
-
-    <li class="profile-item profile-gender">
-      <small class="profile-item-title">Company Name</small>
-      <p class="profile-item-text">{{userdata.company_name}}</p>
-    </li>
-    <li class="profile-item profile-gender">
-      <small class="profile-item-title">Company Type</small>
-      <p class="profile-item-text">{{userdata.company_type}}</p>
-    </li>
-    <li class="profile-item profile-user-type">
-      <small class="profile-item-title">User Type</small>
-      <p class="profile-item-text">Recruiter</p>
-    </li>
-    {% endfor %}
-  </ul>
-</div>
- {% include 'footer.html' %} {% endcomment %}
 <title>Profile</title>
 {% load static %}
 {% include 'header.html' %}
@@ -61,6 +13,7 @@
             <p class="profile-bio">
               {{userdata.bio}}
             </p>
+            <a  onclick="openForm()">change profile picture></a>
           </div>
         </div>
         <ul class="profile-info">
@@ -87,9 +40,38 @@
           <li class="profile-info-items">
             <h5 class="profile-info-title">Company website</h5>
             <p class="profile-info-detail">{{userdata.website}}</p>
+            <a href=" {% url 'edit_recruiter_data' %} ">edit details></a>
+
           </li>
           
-         
+         <a href="{% url 'password_change' %}">change password></a>
         </ul>
         
         {% endfor %}
+
+
+
+
+<div class="form-popup" id="myForm">
+  <form action="{% url 'pp_change' %}" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+    <h1 class="details">Please enter following details to continue</h1>
+    <label for="image">Chose company logo:</label>
+    <input type="file" id="image" name="image" accept="image/*">
+
+    <div class="btns">
+    <a href="{% url 'pp_change' %}"><button type="submit" name="submit" class="btn btn-primary apply">Change</button></a>
+      <button type="button" class="btn btn-primary cancel" onclick="closeForm()">Close</button>
+    </div>
+  </form>
+</div>
+
+<script>
+function openForm() {
+  document.getElementById("myForm").style.display = "block";
+}
+
+function closeForm() {
+  document.getElementById("myForm").style.display = "none";
+}
+</script>
