--- a/Ejobs/templates/header.html
+++ b/Ejobs/templates/header.html
@@ -7,7 +7,7 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    
+    <script defer src="{% static 'main.js' %}"></script>
   </head>
     <div class="container">
       <nav class="top-nav">
@@ -54,9 +54,15 @@
           {% endif %}
           
         </ul>
+
       </nav>
 
-
+{% for message in messages %}
+<div class="popup-msg">
+  <p class="popup-msg-text">{{message}}</p>
+  <i class="fa fa-times popup-close"></i>
+</div>
+{% endfor %}
 
 
 
