--- a/Ejobs/templates/jobs/addJob.html
+++ b/Ejobs/templates/jobs/addJob.html
@@ -4,21 +4,14 @@
 {% comment %} {% load static %} 
 <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}" /> {% endcomment %}
 {% block content %}
-<div class="job-container"style="margin-top:200px; margin-bottom:300px;">
+<div class="job-container">
   <div class="form-group form-listJob">
     <h3 class="form-title">Create A job</h3>
     <form method="POST" action="">
       {% csrf_token %} {{ form.as_ul }}
-      <input class="form-button btn btn-primary" type="submit" name="submit" />
+      <input class="form-button btn btn-primary" type="submit" name="submit" style="margin-top:20px;"/>
     </form>
   </div>
 </div>
 {% endblock %}
-{% for message in messages %}
-      <div class="popup-msg">
-        {% for message in messages %}
-        <p class="popup-msg-text">{{message}}</h1>
-        {% endfor %}
-      </div>
-{% endfor %}
 {% include 'footer.html' %}
