--- a/Ejobs/templates/jobs/appliedjobs.html
+++ b/Ejobs/templates/jobs/appliedjobs.html
@@ -1,6 +1,7 @@
 {% include 'header.html' %}
 <title>Applied Jobs</title>
 <section class="jobs-wrapper section-wrapper">
+{% include 'bannerad.html'%}
   <ul class="jobs-cards">
   <h1> Your applied jobs</h1>
   {% for job in jobs %}
@@ -46,9 +47,5 @@
       {% endfor %}
     </li>
  </section>
-<div class="popup-msg">
-    {% for message in messages %}
-        <p class="popup-msg-text">{{message}}</h1>
-    {% endfor %}
-</div>
+ 
 {% include "footer.html" %}
