--- a/Ejobs/templates/seeker/profile.html
+++ b/Ejobs/templates/seeker/profile.html
@@ -13,9 +13,43 @@
             <p class="profile-bio">
               {{userdata.bio}}
             </p>
-            <a  onclick="openForm()">change profile picture></a>
-            <a href="{% url 'password_change' %}">change password></a>
+            <a  onclick="openForm()" class="changepp">change profile picture></a><br>
+            <a href="{% url 'password_change' %}" >change password></a>
+
+
+
+            <div class="form-popup" id="myForm">
+        <form
+          action="{% url 'pp_change' %}"
+          method="post"
+          enctype="multipart/form-data"
+        >
+          {% csrf_token %}
+          <label for="image">Chose a new profile picture:</label>
+          <input type="file" id="image" name="image" accept="image/*" />
+
+          <div class="btns">
+            <a href="{% url 'pp_change' %}"
+              ><button
+                type="submit"
+                name="submit"
+                class="btn btn-primary apply"
+              >
+                Change
+              </button></a
+            >
+            <button
+              type="button"
+              onclick="closeForm()"
+              style="border: none"
+            >
+             <i class="fa fa-times"></i>
+            </button>
           </div>
+        </form>
+      </div>
+          </div>
+          
         </div>
         <ul class="profile-info">
           <li class="profile-info-items">
@@ -112,7 +146,7 @@
 
 
 
-<div class="form-popup" id="myForm">
+{% comment %} <div class="form-popup" id="myForm">
   <form action="{% url 'change_pp' %}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
     <h1 class="details">Please enter following details to continue</h1>
@@ -124,7 +158,7 @@
       <button type="button" class="btn btn-primary cancel" onclick="closeForm()">Close</button>
     </div>
   </form>
-</div>
+</div> {% endcomment %}
 
 <script>
 function openForm() {
